# youtube-transcript-analyzer

./: pyproject.toml  requirements.txt  youtube_crew.py
config/: agents.yaml  tasks.yaml
src/: ai_research_crew.py  main.py  youtube_analysis_crew.py  youtube_crew.py
src/tools/: youtube_tools.py
