[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-transcript-analyzer"
version = "0.1.0"
authors = [
  { name="Riley Brown", email="your.email@example.com" },
]
description = "A CrewAI project for analyzing YouTube video transcripts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "crewai",
    "langchain",
    "requests",
    "python-dotenv",
    "openai",
]

[project.urls]
"Homepage" = "https://github.com/rbrown101010/youtube-transcript-analyzer"
"Bug Tracker" = "https://github.com/rbrown101010/youtube-transcript-analyzer/issues" 