[tool.poetry]
name = "youtube-transcript-analyzer"
version = "0.1.0"
description = "A CrewAI project for analyzing YouTube video transcripts"
authors = ["Riley Brown <rileykirkwoodbrown@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "*"
langchain = "*"
requests = "*"
python-dotenv = "*"
openai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 